[tool.poetry]
name = "python-cloud-debug"
version = "0.1.0"
description = ""
authors = ["Yoshiki Shibukawa <yoshiki@shibu.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
uvloop = "^0.15.2"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
